update group photo

--- a/index.html
+++ b/index.html
@@ -6,17 +6,23 @@
 </head>
 
 <body>
-    <h1>MEMBERS</h1>
-    <img src="./images/dat-villa.png" alt="" usemap="#workmap">
+    <header>
+        <h1>MEMBERS</h1>
+    </header>
+    <main>
+        <img src="./images/anh_nhom.png" alt="" usemap="#workmap">
 
-    <map name="workmap">
-        <area shape="rect" coords="0,0,1000,1000" alt="20127577" href="./members/20127577/20127577.html">
-        <!-- <area shape="rect" coords="290,172,333,250" alt="Phone" href="phone.htm">
+        <map name="workmap">
+            <area shape="rect" coords="0,0,1000,1000" alt="20127577" href="./members/20127577/20127577.html">
+            <!-- <area shape="rect" coords="290,172,333,250" alt="Phone" href="phone.htm">
         <area shape="circle" coords="337,300,44" alt="Coffee" href="coffee.htm"> -->
-    </map>
+        </map>
 
-    <p>Dat villa.</p>
-
+        <p>Dat villa.</p>
+    </main>
+    <footer>
+        Contact: +84 1234567890
+    </footer>
 </body>
 
 </html>
