--- a/members/20127577/20127577.html
+++ b/members/20127577/20127577.html
@@ -2,13 +2,20 @@
 <html>
 
 <head>
-    <!-- <link rel="stylesheet" href="./styles/index.css"> -->
+    <link rel="stylesheet" href="./20127577.css">
 </head>
 
 <body>
-    <h1>DAT VILLA</h1>
-    <img src="./images/dat-villa.png" alt="">
-    <p>Dat villa.</p>
+    <h1>MEMBER DETAIL</h1>
+    <img src="./images/20127577.png" alt="20127577" class="member-img">
+    <p>Hình đại diện <br>
+        Họ tên <br>
+        MSSV <br>
+        Ngày sinh <br>
+        Email <br>
+        SĐT <br>
+        Liên kết quay về thông tin nhóm <br>
+    </p>
 
 </body>
 
