update detail profile, map image

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         </div>
         <map name="workmap">
             <!-- Nhật -->
-            <area shape="rect" coords="0,0,250,1000" alt="Phone" href="Nhật.html">
+            <area shape="rect" coords="0,0,250,1000" alt="Phone" href="./members/20127583/20127583.html">
             <!-- Nguyên -->
             <area shape="rect" coords="250,0,500,1000" alt="20127577" href="./members/20127577/20127577.html">
             <!-- Anh Đức -->
-            <area shape="circle" coords="500,0,1000,1000" alt="Coffee" href="Anh Đức.html">
+            <area shape="circle" coords="500,0,1000,1000" alt="Coffee" href="./members/19127122/19127122.html">
         </map>
 
         <h2 class="group-detail__title">Group Detail <br>Tên nhóm <br> Danh sách thành viên + MSSV <br></h2>
