--- a/members/20127577/20127577.html
+++ b/members/20127577/20127577.html
@@ -1,21 +1,59 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <link rel="stylesheet" href="./20127577.css">
+    <meta charset="UTF-8">
+    <title>CSS User Profile Card</title>
+    <link rel="stylesheet" href="20127577.css">
+    <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
 </head>
 
 <body>
-    <h1>MEMBER DETAIL</h1>
-    <img src="./images/20127577.png" alt="20127577" class="member-img">
-    <p>Hình đại diện <br>
-        Họ tên <br>
-        MSSV <br>
-        Ngày sinh <br>
-        Email <br>
-        SĐT <br>
-        Liên kết quay về thông tin nhóm <br>
-    </p>
+
+    <div class="wrapper">
+        <div class="left">
+            <img src="./images/20127577.png" alt="user" width="100">
+            <h4>Phan Nguyễn Phước Nguyên</h4>
+            <p>Web Developer</p>
+        </div>
+        <div class="right">
+            <div class="info_top">
+                <h3>Information</h3>
+                <div class="info_data_top">
+                    <div class="data">
+                        <h4>Mã số sinh viên</h4>
+                        <p>20127577</p>
+                    </div>
+                    <div class="data">
+                        <h4>Ngày tháng năm sinh</h4>
+                        <p>05/09/2002</p>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="info_bottom">
+                <div class="info_data_bottom">
+                    <div class="data">
+                        <h4>Email</h4>
+                        <p>20127577@student.hcmus.edu.vn</p>
+                    </div>
+                    <div class="data">
+                        <h4>điện thoại</h4>
+                        <p>0123456789</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="social_media">
+                <ul>
+                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
 
 </body>
 
