--- a/members/19127122/19127122.html
+++ b/members/19127122/19127122.html
@@ -43,7 +43,7 @@
                         <p>19127122@student.hcmus.edu.vn</p>
                     </div>
                     <div class="data">
-                        <h4>điện thoại</h4>
+                        <h4>Điện thoại</h4>
                         <p>0706833118</p>
                     </div>
                 </div>
