--- a/members/20127583/20127583.html
+++ b/members/20127583/20127583.html
@@ -42,7 +42,7 @@
                         <p>20127583@student.hcmus.edu.vn</p>
                     </div>
                     <div class="data">
-                        <h4>điện thoại</h4>
+                        <h4>Điện thoại</h4>
                         <p>0974409604</p>
                     </div>
                 </div>
