--- a/members/20127577/20127577.html
+++ b/members/20127577/20127577.html
@@ -42,7 +42,7 @@
                         <p>20127577@student.hcmus.edu.vn</p>
                     </div>
                     <div class="data">
-                        <h4>điện thoại</h4>
+                        <h4>Điện thoại</h4>
                         <p>0123456789</p>
                     </div>
                 </div>
