--- a/index.html
+++ b/index.html
@@ -2,14 +2,22 @@
 <html>
 
 <head>
+    <title>BT-NHOM-LTWEB</title>
     <link rel="stylesheet" href="./styles/index.css">
+    <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
 </head>
 
 <body>
     <header class="container">
+        <i class="fa fa-bars white" aria-hidden="true"
+            style="position: absolute; left:20px; font-size: 24px; cursor: pointer;"></i>
         <h2 class="white">MEET OUT TEAM MEMBERS HERE!</h2>
+        <img src="./images/cat.png" alt="cat"
+            style="width: 50px; height: 50px; border-radius: 50%; position: absolute; right: 20px; cursor: pointer;">
     </header>
     <main class="container col">
+        <div class="group-title">NOTFOUND404</div>
+
         <div class="container img-wrapper">
             <img src="./images/anh_nhom1.png" alt="" usemap="#workmap" class="group-img">
         </div>
@@ -22,7 +30,12 @@
             <area shape="circle" coords="500,0,1000,1000" alt="Coffee" href="./members/19127122/19127122.html">
         </map>
 
-        <h2 class="group-detail__title">Group Detail <br>Tên nhóm <br> Danh sách thành viên + MSSV <br></h2>
+        <h2 class="group-detail__title">
+            <br>Lâm Trí Đức 19127122
+            <br>Phan Nguyễn Phước Nguyên 20127577
+            <br>Nguyễn Như Nhật 20127583
+
+        </h2>
         <p class="group-detail__desc"> Lorem ipsum dolor sit amet
             consectetur adipisicing elit. Repellendus odit facilis
             error
