--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             style="width: 50px; height: 50px; border-radius: 50%; position: absolute; right: 20px; cursor: pointer;">
     </header>
     <main class="container col">
-        <div class="group-title">NOTFOUND404</div>
+        <div class="group-title">TalentBox</div>
 
         <div class="container img-wrapper">
             <img src="./images/anh_nhom1.png" alt="" usemap="#workmap" class="group-img">
